ficheros adjuntos en questions multiple y simple

--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -28,6 +28,7 @@ body {margin-bottom: 135px !important;}
 .right {text-align: right !important;}
 .hidden {display:none;}
 .margin-bottom-10 {margin-bottom: 10px;}
+.margin-top-40{margin-top: 40px;}
 .icon-small i {font-size: 1.4em;}
 .nav-tabs-right {padding-right: 20px;
 	margin-top: -40px;}
