--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -513,6 +513,14 @@ footer {margin-top: 10px;
     text-align: center;
     min-height: 55px;}
 
+.edit-fees-frame {width: 70%;
+    margin: 10px auto;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+    min-height: 75px;}
+    
 .edit-survey-head{margin: 10px auto;
     width: 70%;
     display: flex;
