--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -828,6 +828,15 @@ footer {margin-top: 10px;
     font-weight: bold;
     border: none;
     margin-bottom: 5px;}
+    
+.question-type-aux {
+	background-color: #f5f5f5 !important;
+    margin-top: 6px !important;
+    margin-bottom: 0px !important;
+    border-color: #4a4a4a !important;
+    border: 1px solid;
+    border-radius: 4px;
+}
 
 .likert-options {display: inline-flex;
     width: 100%;
