--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -211,7 +211,7 @@ input[type="color"]:focus,
 .st-styles .btn {/*box-shadow: inset 0 3px 5px rgba(255, 255, 255, .30) !important;*/}
 .st-styles .btn:hover,
 .st-styles .btn:focus {/*box-shadow: inset 0 3px 5px rgba(0, 0, 0, .30) !important;*/}
-.st-styles .btn-primary {background-color: #337AB7 !important;}
+.st-styles .btn-primary {background-color: #337AB7}
 .st-styles .btn-primary:hover,
 .st-styles .btn-primary:focus {background-color: #286090 !important;}
 .st-styles .btn-default {border-color: #737373 !important;}
@@ -310,6 +310,7 @@ button span {margin-left: 5px;}
 .user-panel-menu i {margin-bottom: 10px;
 	font-size: 8em;}
 .user-panel-menu ul li {margin-bottom: 40px;}
+
 
 
 /*----------------------------------------------*\
@@ -760,6 +761,10 @@ footer {margin-top: 10px;
 	color: #CFE0EF;}
 
 /** questions **/
+.noEditingTitle{
+	float: left !important;
+	margin-top: 5px !important;
+}
 
 .panel-question {width: 100%;
 	margin: 15px auto;
@@ -977,6 +982,53 @@ footer {margin-top: 10px;
 
 .fieldset-next-dependences{padding-left: 139px;}
 .fieldset-second-dependence{padding-left: 50px;}
+
+.editor {
+	overflow:scroll;
+	min-height:100px;
+	margin-top:5px;
+	}
+
+.rowPlus {
+    margin-right: 15px !important;
+    margin-left: -15px !important;
+}
+
+.editor ul li{
+	list-style: initial !important;
+}
+
+.editor ol li{
+	list-style-type:decimal !important;
+}
+
+.btn-primary {background-color: #337AB7 !important;}
+
+.btn-info {
+    color: #000 !important;
+    background-color: #8fbce0 !important;
+}
+
+.wellBContent {
+    min-height: 20px;
+    width: 65% !important;
+    padding: 19px;
+    margin-bottom: 20px;
+    background-color: #fff;
+    border: 1px solid #4A4A4A;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+}
+
+.form-edit{
+	margin-left:5px !important;
+	margin-right:5px !important;
+	width: 90% !important;
+}
+
+.btn-add-link{
+	margin-left: 5px !important;
+}
 
 /*----------------------------------------------*\
 		$USER_PANEL_EDIT_SURVEY
