--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -558,6 +558,18 @@ footer {margin-top: 10px;
     text-align: center;
     min-height: 55px;}
 
+.no-default-survey-frame {
+    width: 70%;
+    margin: 10px auto;
+    border: 2px solid #B60000;
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+    min-height: 55px;
+    color: #B60000;
+}
+
+
 .edit-fees-frame {width: 70%;
     margin: 10px auto;
     border: 1px solid #ccc;
@@ -583,6 +595,12 @@ footer {margin-top: 10px;
     width: 100%;
     text-align: center;}
     
+.no-default-info-title {font-size: 1.3em;
+    border: none;
+    margin: 0 auto;
+    width: 100%;
+    text-align: justify;}
+
 .survey-info-project {float:right;
 	width: 50%;
     display: none;}
