--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -561,12 +561,13 @@ footer {margin-top: 10px;
 .no-default-survey-frame {
     width: 70%;
     margin: 10px auto;
-    border: 2px solid #B60000;
+    background: #dadada;
+    border: 3px solid #000;
     border-radius: 10px;
-    padding: 10px;
+    padding: 20px;
     text-align: center;
     min-height: 55px;
-    color: #B60000;
+    color: #000;
 }
 
 
