--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -563,6 +563,14 @@ footer {margin-top: 10px;
     text-align: center;
     min-height: 75px;}
     
+.edit-quote-frame {width: 100%;
+    margin: 10px auto;
+    border: 1px solid #fff;
+    padding: 10px;
+    text-align: center;
+    min-height: 75px;
+    background-color: #ffffff;}
+    
 .edit-survey-head{margin: 10px auto;
     width: 70%;
     display: flex;
@@ -1458,7 +1466,7 @@ footer {margin-top: 10px;
 }
 
 .quotadiv{
-	border-bottom: 1px solid #ccc !important;
+	/*border-bottom: 1px solid #ccc !important;*/
 }
 
 .quotaname{
