--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -1088,8 +1088,8 @@ footer {margin-top: 10px;
 .btn-submit-page button {min-width: 100px;}
 .btn-submit-page-continue {float: right;}
 
-.survey-finish-content {width: 50%;
-	margin: 280px auto;
+.survey-finish-content {width: 65%;
+	margin: 11% auto;
 	text-align: center;}
 	
 .type-tittle{
