limit caracter messages

--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -1556,3 +1556,10 @@ footer {margin-top: 10px;
 
 .num-pages {text-align: center;
     font-size: 1.3em;}
+    
+
+/*----------------------------------------------*\
+		$Survey
+\*----------------------------------------------*/
+
+.char-counter {text-align: right;}
