Navigation error control, progress bar and finish page

--- a/SurveyTool/WebContent/css/survey.css
+++ b/SurveyTool/WebContent/css/survey.css
@@ -385,3 +385,8 @@
 	text-align:right;
 	padding:2em 0em;
 }
+/*----------------------------------------------*\
+		$FINISH PAGE
+\*----------------------------------------------*/
+.survey-finish-content {text-align: center;
+    margin-top: 130px;}
