--- a/SurveyTool/WebContent/css/survey.css
+++ b/SurveyTool/WebContent/css/survey.css
@@ -417,6 +417,13 @@
 	margin-right:-3em;
 	margin-left:2.5em;
 }
+.msg-alert{
+	font-size:1.072em;
+	background:url(../img/msg-bg-info.png) bottom right no-repeat;
+	padding-bottom:25px;
+	margin-right:-3em;
+	margin-left:2.5em;
+}
 .error-summary{
 	border:2px solid #f00;
 	padding:1em 2em 1em 45px;
@@ -426,10 +433,17 @@
 .form-question-content .msg-error{
 	margin-left:0em;
 	background:url(../img/msg-bg-exc.png) bottom right no-repeat;
-	margin-bottom:-35px;
+	margin-bottom:-20px;
 	padding-bottom:45px;
 }
-.msg-error > div{
+.form-question-content .msg-alert{
+	margin-left:0em;
+	background:url(../img/msg-bg-exc-info.png) bottom right no-repeat;
+	margin-bottom:-20px;
+	padding-bottom:45px;
+}
+.msg-error > div,
+.msg-alert > div{
 	padding-left:70px;
 	margin-left:-2em;
 }
@@ -439,7 +453,11 @@
 .msg-error > div.error{
 	background:url(../img/exclamation.png) left top no-repeat;
 }
+.msg-alert > div.error{
+	background:url(../img/exclamation-info-2.png) left top no-repeat;
+}
 .msg-error .msg-title,
+.msg-alert .msg-title,
 .error-summary .msg-title{
 	text-transform:uppercase;
 	color:#016FB8;
