--- a/SurveyTool/WebContent/css/survey.css
+++ b/SurveyTool/WebContent/css/survey.css
@@ -123,6 +123,10 @@
 	font-size:3em;
 	line-height:.9;
 }
+.previewFileUpliaded {
+	text-align: center;
+    margin-bottom: 20px;
+}
 
 /* InputText Textarea*/
 #form-question .form-control,
@@ -191,7 +195,7 @@
 	border:3px solid #fff;
 	padding:2px;
 	width:185px;
-	height:195px;
+	/*height:195px;*/
 }
 #form-question .checkbox.img label:hover span,
 #form-question .checkbox.img input:focus + label span{
