--- a/SurveyTool/WebContent/css/survey.css
+++ b/SurveyTool/WebContent/css/survey.css
@@ -128,6 +128,11 @@
     margin-bottom: 20px;
 }
 
+.previewFileUpliaded img {width: 500px;
+    border: 3px solid #C5D3DA;
+    padding: 3px;
+    margin-bottom: 10px;}
+
 /* InputText Textarea*/
 #form-question .form-control,
 #form-question input[type=number]{
